- Added JrCs's Keylayout support in Keymapper
- Fixed an issue in AcpiCodec where the highest cpu frequency may not be added in the pstate package on some configurations 
- Improved detection of nb of core(s) and thread(s) for AMD processors
- Updated keymapper ...
- Applied scorpius's patch (to get an unstretched boot screen for nVidia cards on DVI) in boot0.s , disabled by default,
  see - http://forum.voodooprojects.org/index.php/topic,2158.msg10345/boardseen.html#new - for more info.
- Applied Vladimir Zidar's hibernate patch on hibernateEnabler
- Applied "Intel HD Graphics 3000" patch to gma.c (credit: ???) , 
  found at - http://www.darwinx86.net/forum/61-section-francaise-/1880-espace-de-discussion-anval?limit=10&start=60#6247 -
- Added AMD support (most of the code is derived from the trunk, MUST BE ENABLED BY HAND IN CPU.C) see - http://forge.voodooprojects.org/p/chameleon/issues/163/ - 
- Improved Core Ix support in AcpiCodec
- Improved c-states support in AcpiCodec

- Sync'd nvidia.c and gma.c (see GraphicEnabler module) to the trunk
- Improved compatibility with xcode4 (afaik only the modules gui and smbiosgetters will not work with xcode4, even if they are built without any errors)
- Applied JrCs's path for more protection against buffer overflow in some case (trunk v1449)
- Added a mechanism to detect extra mkexts/kexts before loading the kernelCache
- Moved smp code to Erich Boleyn's smp-imps (not fully implemented yet)
- Added the UseKernelCache option only for compatibility with the trunk ("Yes" have no effect, since it's the default),
  the Flag "-F" which do the same things is still valid
- Re-worked SSDT generation, and merged with the Bits's code
- Removed aml_generator from AcpiCodec, now use acpicode.c to generate aml file
- Added YellowIconFixer module
- Merged fsb detection with Bits's code in cpu.c (slightly faster)
- Fixed a bug related to ACPI in AcpiCodec (thanck to StephN666 for testing)